--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -43,11 +44,18 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3"
   },
-  "husky":{
+  "lint-staged": {
+    "src/**/*.js": [
+       "eslint --fix",  
+       "git add"
+    ]
+  },
+  "husky": {
     "hooks": {
-       "pre-commit": "npm run lint"
+      "pre-commit": "lint-staged"
     }
- }
+  }
 }
