--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,44 +7,21 @@
 # More details at https://github.com/eslint/eslint
 # and https://eslint.org
 
-name: ESLint
+name: Node Continuous Integration
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "main" ]
-  schedule:
-    - cron: '21 13 * * 2'
+    branches: [ master ]
+
 
 jobs:
-  eslint:
-    name: Run eslint scanning
+  test_pull_request:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install ESLint
-        run: |
-          npm install eslint
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
-
-      - name: Run ESLint
-        run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif 
-          --output-file eslint-results.sarif
-        continue-on-error: true
-
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+          node-version: 14.20.0
+      - run: npm ci
+      - run: npm test
+      - run: npm run build
