--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -10,8 +10,14 @@
 name: Node Continuous Integration
 
 on:
+  push:
+    branches:
+      - main
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - main
+      - master
 
 
 jobs:
