--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           node-version: 14.20.0
       - run: npm ci
-      - run: npm test
       - run: npm run build
+      - run: npm run lint
