--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,7 +7,7 @@
 # More details at https://github.com/eslint/eslint
 # and https://eslint.org
 
-name: Node Continuous Integration
+name: Eslint
 
 on:
   push:
